--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="contenidocentral">
         <div class="texto">
           <h1 class="tituloprincipal">Jaz Roca Beauty Studio</h1>
-          <h2 class="subtituloprincipal">Bienvenidos!!</h2>
+          <h2 class="subtituloprincipal">Bienvenidos!</h2>
         </div>
         <div class="foto">
             <img class="fotojazrecibida" src="./assets/img/sobremi/jazrocapelu.png" alt="Jaz con titulo">
