--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaz Roca Peluqueria</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./assets/img/logo/icono.png" type="image/png">
     <meta name="description" content="web dedicada a la peluqueria estilo peinados cortes de cabello colores tinturas">
@@ -11,19 +12,19 @@
     <meta name="author" content="hernan berrino">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado container-fluid">
         <div>
             <img class="logo" src="./assets/img/logo/logo.png" alt="logo Peluqueria JazRoca">
         </div>
         <nav>
-            <ul class="menu">
-                <li><a class="botonmenu" href="./pages/aboutme.html">Sobre Mi</a></li>
-                <li><a class="botonmenu" href="./pages/works.html">Trabajos</a></li>
-                <li><a class="botonmenu" href="./pages/products.html">Productos</a></li>
-                <li><a class="botonmenu" href="./pages/contact.html">Contactame</a></li>
+            <ul class="menu nav">
+                <li class="nav-item"><a class="botonmenu nav-link" href="./pages/aboutme.html">Sobre Mi</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="./pages/works.html">Trabajos</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="./pages/products.html">Productos</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="./pages/contact.html">Contactame</a></li>
             </ul>
         </nav>
-        <button><a class="login" href="./pages/enproceso.html" target="_blank">INICIAR SESION</a></button>
+        <a class="login btn" href="./pages/enproceso.html" target="_blank">INICIAR SESION</a>
     </header>
     <main class="mainprincipal">
     <div class="contenidocentral">
