Mejorando diseño responsive+bootstap

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
         </nav>
         <a class="login btn" href="./pages/enproceso.html" target="_blank">INICIAR SESION</a>
     </header>
-    <main class="mainprincipal">
-    <div class="contenidocentral">
+    <main class="mainprincipal container-fluid py-4">
+    <div class="contenidocentral flex-md-row gap-4">
         <div class="texto">
           <h1 class="tituloprincipal">Jaz Roca Beauty Studio</h1>
           <h2 class="subtituloprincipal">Bienvenidos!</h2>
         </div>
         <div class="foto">
-            <img class="fotojazrecibida" src="./assets/img/sobremi/jazrocapelu.png" alt="Jaz con titulo">
+            <img class="fotojazrecibida img-fluid rounded" src="./assets/img/sobremi/jazrocapelu.png" alt="Jaz con titulo">
         </div>
     </div>
-        <div class="cajabotones">
+        <div class="cajabotones gap-3 mt-3">
              <button><a class="submenu" href="pages/works.html">VER CORTES TENDENCIA</a></button>
              <button><a class="submenu" href="https://wa.me/5491159788610" target="_blank">RESERVAR TURNO!</a></button>
          </div>
     </main>
-    <footer class="redes">
+    <footer class="redes container-fluid">
         <nav>
-            <ul class="menuredes">
+            <ul class="menuredes flex-column flex-md-row gap-md-5 gap-3">
                 <li><a class="enlacered" href="https://www.instagram.com/jaz.roca_peluqueria/" target="_blank">INSTAGRAM</a></li>
                 <li><a class="enlacered" href="https://mail.google.com/mail/?view=cm&fs=1&to=jazminroca.02@gmail.com&su=Consulta" target="_blank">GMAIL</a></li>
                 <li><a class="enlacered" href="https://wa.me/5491159788610" target="_blank">WHATS APP</a></li>
