--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mi</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="./assets/img/logo/icono.png" type="image/png">
     <meta name="description" content="web dedicada a la peluqueria estilo peinados cortes de cabello colores tinturas">
@@ -11,38 +12,40 @@
     <meta name="author" content="hernan berrino">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado container-fluid">
         <div>
             <img class="logo" src="../assets/img/logo/logo.png" alt="logo Peluqueria JazRoca">
         </div>
         <nav>
-            <ul class="menu">
-                <li><a class="botonmenu" href="../index.html">Inicio</a></li>
-                <li><a class="botonmenu" href="works.html">Trabajos</a></li>
-                <li><a class="botonmenu" href="products.html">Productos</a></li>
-                <li><a class="botonmenu" href="contact.html">Contactame</a></li>
+            <ul class="menu nav">
+                <li class="nav-item"><a class="botonmenu nav-link" href="../index.html">Inicio</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="works.html">Trabajos</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="products.html">Productos</a></li>
+                <li class="nav-item"><a class="botonmenu nav-link" href="contact.html">Contactame</a></li>
             </ul>
         </nav>
-        <button><a href="enproceso.html" target="_blank"></a>INICIAR SESION</button>
+        <a class="login btn" href="enproceso.html" target="_blank">INICIAR SESION</a>
     </header>
-    <main>
+    <main class="container-fluid py-4">
+      <div class="contenido_main">
         <h1 class="tituloprincipal">SOBRE MI</h1>
-        <section>
-            <img src="../assets/img/sobremi/jazrocapelu.png" alt="jaztitulo">
-            <p>Soy una persona responsable y creativa. Me considero extrovertida y carismática, siempre atenta a los detalles y con una actitud empática. Disfruto mucho trabajar en equipo y conectar con las personas desde un lugar auténtico y positivo.</p>
+        <section class="section_descriptiva gap-3">
+            <img src="../assets/img/sobremi/jazrocapelu.png" class="gap-3" alt="jaztitulo">
+            <p class="texto_descriptivo flex-grow-1 m-0">Soy una persona responsable y creativa. Me considero extrovertida y carismática, siempre atenta a los detalles y con una actitud empática. Disfruto mucho trabajar en equipo y conectar con las personas desde un lugar auténtico y positivo.</p>
         </section>
-        <section>
+        <section class="section_descriptiva gap-3">
             <img src="../assets/img/sobremi/jaztrabajando.png" alt="jaztrabajando">
-            <p>Me recibí de peluquera unisex, soy maquilladora profesional, lashista, y actualmente estoy por finalizar mi formación como colorista. Disfruto abordar nuevos desafíos y seguir creciendo en cada paso.</p>
+            <p class="texto_descriptivo flex-grow-1 m-0">Me recibí de peluquera unisex, soy maquilladora profesional, lashista, y actualmente estoy por finalizar mi formación como colorista. Disfruto abordar nuevos desafíos y seguir creciendo en cada paso.</p>
         </section>
-        <div class="cajabotones">
+        <div class="cajabotones gap-3 mt-3">
             <button><a class="submenu" href="https://wa.me/5491159788610" target="_blank">RESERVAR TURNO!</a></button>
             <button><a class="submenu" href="../index.html">VOLVER AL INICIO</a></button>
         </div>
+      </div>
     </main>
-    <footer class="redes">
+    <footer class="redes container-fluid">
         <nav>
-            <ul class="menuredes">
+            <ul class="menuredes flex-column flex-md-row gap-md-5 gap-3">
                 <li><a class="enlacered" href="https://www.instagram.com/jaz.roca_peluqueria/" target="_blank">INSTAGRAM</a></li>
                 <li><a class="enlacered" href="https://mail.google.com/mail/?view=cm&fs=1&to=jazminroca.02@gmail.com&su=Consulta" target="_blank">GMAIL</a></li>
                 <li><a class="enlacered" href="https://wa.me/5491159788610" target="_blank">WHATS APP</a></li>
