--- a/pages/products.html
+++ b/pages/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="./assets/img/logo/icono.png" type="image/png">
     <meta name="description" content="web dedicada a la peluqueria estilo peinados cortes de cabello colores tinturas">
@@ -26,7 +27,7 @@
         <button><a href="./enproceso.html"></a>INICIAR SESION</button>
     </header>
     <main>
-        <h1 class="tituloprincipal">Bienvenidos a la seccion de productos</h1>
+        <h1 class="tituloprincipal">Bienvenidoos a la seccion de productos</h1>
         <div>
             <h2>Aqui encontraran produtos utilizados de primera calidad</h2>
             <img src="../assets/img/utils/carritocompras.png" alt="iconocompras">
