--- a/pages/products.html
+++ b/pages/products.html
@@ -27,7 +27,7 @@
         <button><a href="./enproceso.html"></a>INICIAR SESION</button>
     </header>
     <main>
-        <h1 class="tituloprincipal">Bienvenidoos a la seccion de productos</h1>
+        <h1 class="tituloprincipal">Bienvenidos a la seccion de productos</h1>
         <div>
             <h2>Aqui encontraran produtos utilizados de primera calidad</h2>
             <img src="../assets/img/utils/carritocompras.png" alt="iconocompras">
